@@ -11,6 +11,8 @@ Changes in this release:
 - New option: gradient_colors = { "#ffffff", "#ffffff", "#ffffff", "#ffffff" }
               to set the colors used on the gradient of many widgets.
               gradient_colors = FALSE to disable.
+- New option: shadow_shades = { 1.0, 1.0 } to draw a gradient on 
+              the shadow of some widgets.
 - New option: spinbuttonstyle = 1 to add a separator on the GtkSpinButton.
 - New option: textstyle = 1 to draw an inset on the text (use carefully).
 - New option: trough_shades = { 1.0, 1.0 } to draw a gradient on 
